--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,11 +36,20 @@
         app:layout_constraintTop_toBottomOf="@id/editView_email"
         />
     <Button
-        android:id="@+id/reg_button"
+        android:id="@+id/login_button"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="REGISTER"
+        android:text="LOG IN"
         app:layout_constraintRight_toRightOf="@id/editView_password"
-        app:layout_constraintTop_toBottomOf="@id/editView_password"/>
+        app:layout_constraintTop_toBottomOf="@id/editView_password"
+        app:layout_constraintLeft_toLeftOf="@id/editView_password"/>
+    <TextView
+        android:id="@+id/text_signup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SIGN UP"
+        app:layout_constraintTop_toBottomOf="@id/login_button"
+        app:layout_constraintRight_toRightOf="@id/login_button"
+        app:layout_constraintLeft_toLeftOf="@id/login_button"/>
 
 </android.support.constraint.ConstraintLayout>
