--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
         app:layout_constraintRight_toRightOf="@id/editView_password"
         app:layout_constraintTop_toBottomOf="@id/editView_password"
         app:layout_constraintLeft_toLeftOf="@id/editView_password"/>
-    <TextView
+    <Button
         android:id="@+id/text_signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
